--- a/gb/19/11/6/n11637342.md
+++ b/gb/19/11/6/n11637342.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/khwnkc357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/khwnkc357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/khwnkc357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/khwnkc357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/khwnkc357/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/khwnkc357/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/khwnkc357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>日学者汲取维冠大楼善后经验 赞比日本进步</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/11/8feedfc4811ead4337f5536d3c25646d-600x400.jpg" />
 <h6>日本北海道大学教授吉田邦彦（左2）与台南市府举行美浓地震维冠大楼倒塌重建及后续处理的座谈会，将救灾援助与重建的“台湾经验”带回日本研究。（台南市政府提供）
 </h6>
 <hr>
 <p>【大纪元2019年11月06日讯】（大纪元记者赖友容台湾台南报导）发生重大灾难时，台湾和日本的政府扮演的角色有所不同，营建署副处长朱庆伦表示，台湾民众热情充分发挥爱心捐助，并强力监督政府善后的作为，对于民间资源政府也大多用在灾民身上。</p>
-<p>为了解0206美浓地震台南<ahref="https://github.com/khwnkc357/djy/blob/master/gb/tag/%E7%BB%B4%E5%86%A0%E5%A4%A7%E6%A5%BC.md#1">维冠大楼</a>倒塌重建及后续处理情形，日本北海道大学教授吉田邦彦6日在朱庆伦陪同下到维冠大楼重建中的工地实地勘查，并到市府进行座谈交流。</p>
+<p>为了解0206美浓地震台南<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%B4%E5%86%A0%E5%A4%A7%E6%A5%BC.md#1">维冠大楼</a>倒塌重建及后续处理情形，日本北海道大学教授吉田邦彦6日在朱庆伦陪同下到维冠大楼重建中的工地实地勘查，并到市府进行座谈交流。</p>
 <p>吉田邦彦听取简报后表示，在日本发生重大灾难，政府认为是民间的事，不会给予任何赔偿，即使2007年修法，灾害中房屋全毁最高仅可获得300万日币赔偿；而台湾除了善款捐助，灾民还可以要求国家赔偿，政府官员则积极为灾民处理善后与救助，这些作为比日本进步许多。</p>
 <p>吉田邦彦此趟座谈交流，让他感到受益非浅，将把0206美浓地震救灾援助与重建的“台湾经验”带回日本好好研究。</p>
 <p>朱庆伦表示，为维护人民财产生命安全，台湾建筑法目前正推动加入第三方勘验，对新建建筑物安全加一层保障。◇</p>
@@ -17,48 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/4/7/n7529625.md#1">维冠大楼倒塌  台南检：设计错又偷工减料</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/9/3/n8264373.md#1">维冠大楼价购 市府1.9亿买68%土地</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/9/4/n8266117.md#1">维冠大楼重建否  灾户意愿将定案</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/1/1/n8654805.md#1">【2016台湾十大新闻】小年夜大地震 维冠大楼倒塌115死</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/1/10/n8688758.md#1">维冠大楼倒塌将届1年 戴云发吁重视建筑安全</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/6/15/n9269157.md#1">地震倒塌  台南维冠大楼重建启动</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/9/29/n9682387.md#1">台南维冠大楼重建 灾户109年返家</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/19/2/21/n11060819.md#1">台南维冠大楼塌115死 建筑师等4人判5年定谳</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/20/n12344009.md#1">确保权益 平台订房宜向旅宿业者再确认</a></li>
-<li><a href="https://github.com/khwnkc357/djy/blob/master/gb/20/8/17/n12337011.md#1">文旦贴面膜防晒 “阿嬷嫁妆”获奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/4/7/n7529625.md#1">维冠大楼倒塌  台南检：设计错又偷工减料</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/3/n8264373.md#1">维冠大楼价购 市府1.9亿买68%土地</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/4/n8266117.md#1">维冠大楼重建否  灾户意愿将定案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/1/n8654805.md#1">【2016台湾十大新闻】小年夜大地震 维冠大楼倒塌115死</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/1/10/n8688758.md#1">维冠大楼倒塌将届1年 戴云发吁重视建筑安全</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/15/n9269157.md#1">地震倒塌  台南维冠大楼重建启动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/29/n9682387.md#1">台南维冠大楼重建 灾户109年返家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/2/21/n11060819.md#1">台南维冠大楼塌115死 建筑师等4人判5年定谳</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616352.md#1">支持民主自由不被打倒 南市议会声援乌克兰</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610203.md#1">《沉默呼声》洋溢“勇气” 触动台南观众</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834250.md#1" target="_blank">林辉：一生没有得到思维乐趣的王小波之父</a></li><li><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/4/n9225929.md#1" target="_blank">对中国法轮功学员被迫害的调查（1）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994483.md#1" target="_blank">红斑狼疮病苦十年 她偶遇一纸“心灵药单”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/14/n12329430.md#1">疗愈人心的天堂歌声——创作歌手凯蒂?曼蒂克</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/19/n12343188.md#1">【有冇搞错】中国数字货币是个什么东西？</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/19/n12342750.md#1">【纪元播报】粮荒？中共高调制止餐饮浪费</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/19/n12343568.md#1">【新闻看点】美台会建交？川普显优势 习4缺陷</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12338272.md#1">【新闻看点】北戴河会超长结束 习难脱7大困境</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/18/n12339413.md#1">上海公安局长龚道安被查 将掀政法风暴</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/18/n12339091.md#1">受美制裁 林郑首度承认使用信用卡受限制</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/18/n12340885.md#1">成龙曾自曝做假慈善 不惭言论惊呆网友</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12338375.md#1">孙俪爆料邓超糗事 做了一天笔记最终空无一字</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12338032.md#1">港星住不惯大陆隔离酒店 一句话惹小粉红围剿</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/19/n12342056.md#1">小娴认了与金刚交往 同在垦丁冲浪结缘</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/19/n12341221.md#1">自导自演囧系列电影 徐峥深夜困机场笑翻网友</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12338146.md#1">走路也能护膝盖 医师：对膝盖有益的健走方法</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12336793.md#1">奇迹！挪威公司新技术 沙漠变良田仅需7小时</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12336694.md#1">英国一群绵羊似被“点穴” 静止几个小时</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/18/n12339362.md#1">大陆老翁遛狗 被从天而降的小猫砸昏</a></li>
-<li><a href="https://github.com/ntotyi319/djy/blob/master/gb/20/8/17/n12338232.md#1">子宫肌瘤切掉还会长？4种体质教你从根本改善</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/khwnkc357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/khwnkc357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/6/n11637342.htm">日学者汲取维冠大楼善后经验 赞比日本进步</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/6/n11637342.htm">日学者汲取维冠大楼善后经验 赞比日本进步</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/khwnkc357/djy/blob/master/gb/19/11/6/n11637342.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/khwnkc357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/khwnkc357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/khwnkc357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/khwnkc357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/11/6/n11637342.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
